projects/06-simple-ec2-with-sg/ec2.tf
resource "aws_instance" "first_instance" {
  ami             = "ami-2757f631"
  instance_type   = "t2.micro"
  security_groups = ["${aws_security_group.sg.name}"]
}

resource "aws_eip" "ip" {
  instance = "${aws_instance.first_instance.id}"
}
