projects/06-simple-ec2-with-sg/security-group.tf

resource "aws_security_group" "sg" {
    name        = "sg"
    description = "Allow basic traffic"
}
